Refactor CGI executor to allow command arguments